--- a/NeuroLabs_ML_Task1.ipynb
+++ b/NeuroLabs_ML_Task1.ipynb
@@ -77,14 +77,8 @@
     "from sklearn.linear_model import ElasticNet\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "\n",
-    "\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error,confusion_matrix,r2_score\n",
-    "\n",
-    "from datetime import datetime\n",
     "import warnings \n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -1852,7 +1846,7 @@
     "    plt.show()\n",
     "\n",
     "plot_rmse\n",
-    "(rmse, rmse_test, 'R2 (Training)', 'RMSE (Testing)', 'RMSE Comparison for various Regression Models')"
+    "(rmse, rmse_test, 'RMSE (Training)', 'RMSE (Testing)', 'RMSE Comparison for various Regression Models')"
    ]
   },
   {
